# hack_apr

./: README.md  benchmark_final.json  benchmark_history_2.json  c_run_bench.py  c_run_final.py  generate_dataset.py  helpers.py  init.sh  main.py  pyproject.toml  questions.py  run_bench.py  run_final.py
data/: benchmark_final.json  gen_sql_benchmark.py  sql_schemas.json
data/deprecated/: benchmark_sql.json
polars-bench/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  drizzle.config.ts  package-lock.json  package.json  tailwind.config.ts
polars-bench/app/: globals.css  layout.tsx  page.tsx
polars-bench/components/: navbar.tsx  status-badge.tsx
polars-bench/db/: index.ts  schema.ts
polars-bench/lib/: auth.ts  benchmarks.ts  ids.ts  scoring.ts  session.ts  utils.ts
polars-bench/scripts/: migrate.ts
polars_benchmark_sql/: benchmark_sql.json  questions_sql_summary.csv
polars_benchmark_sql/datasets/: ck_albums.parquet  ck_artists.parquet  ck_customers.parquet  ck_employees.parquet  ck_genres.parquet  ck_invoice_lines.parquet  ck_invoices.parquet  ck_media_types.parquet  ck_playlist_track.parquet  ck_playlists.parquet  ck_tracks.parquet  nw_categories.parquet  nw_customers.parquet  nw_employees.parquet  nw_order_details.parquet  nw_orders.parquet  nw_products.parquet  nw_regions.parquet  nw_shippers.parquet  nw_suppliers.parquet  nw_territories.parquet  sk_actors.parquet  sk_addresses.parquet  sk_categories.parquet  sk_cities.parquet  sk_countries.parquet  sk_customers.parquet  sk_film_actor.parquet  sk_film_category.parquet  (+30 more)
(+33 files in other folders)
