[project]
name = "hack-apr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "docker>=7.1.0",
    "fastapi>=0.135.1",
    "plotly>=6.6.0",
    "polars>=1.39.3",
    "requests>=2.32.5",
    "streamlit>=1.55.0",
    "torch>=2.8.0",
    "transformers>=5.3.0",
    "uvicorn>=0.42.0",
]

[tool.uv.workspace]
members = [
    "submissions/submission_fake",
    "submissions/submission",
]
